--- a/frontend/src/LoginPage.css
+++ b/frontend/src/LoginPage.css
@@ -49,8 +49,13 @@
     margin-top: 15px;
 }
 
-.login-container button:hover {
+.login-container button:hover:not(:disabled) {
     background-color: #3d42aa;
+}
+
+.login-container button:disabled {
+    background-color: #9c9fd3;
+    cursor: not-allowed;
 }
 
 .error-message {
@@ -64,6 +69,8 @@
     margin-top: 20px;
     font-size: 12px;
     color: #555;
+    border-top: 1px solid #eee;
+    padding-top: 15px;
 }
 
 .login-helper ul {
@@ -73,4 +80,21 @@
 
 .login-helper li {
     margin-bottom: 3px;
+}
+
+.register-link {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 14px;
+    color: #555;
+}
+
+.register-link a {
+    color: #4e00b9;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.register-link a:hover {
+    text-decoration: underline;
 }
